--- a/test/command/1126.md
+++ b/test/command/1126.md
@@ -5,9 +5,8 @@ A&=&B,\\
 C&=&D
 \end{eqnarray}
 ^D
-\textbackslash{}begin\{eqnarray\}
-A\&=\&B,\textbackslash{}\textbackslash{} C\&=\&D
-\textbackslash{}end\{eqnarray\}
+\textbackslash begin\{eqnarray\} A\&=\&B,\textbackslash\textbackslash{}
+C\&=\&D \textbackslash end\{eqnarray\}
 ```
 
 ```
