Shared.compactify: Avoid mixed lists.
This improves on the original fix to #5285 by preventing
other mixed lists (lists with a mix of Plain and Para
elements) that were allowed given the original fix.

--- a/test/command/5285.md
+++ b/test/command/5285.md
@@ -13,3 +13,20 @@
  ,[Para [Str "a"]]
  ,[Para [Str "b"]]]]
 ```
+
+```
+% pandoc -t native
+- foo
+
+  foo
+- foo
+
+  > foo
+^D
+[BulletList
+ [[Para [Str "foo"]
+  ,Para [Str "foo"]]
+ ,[Para [Str "foo"]
+  ,BlockQuote
+   [Para [Str "foo"]]]]]
+```
