LaTeX template: Add \frontmatter, \mainmatter, \backmatter for book classes.
Closes #5306.

--- a/data/templates/default.latex
+++ b/data/templates/default.latex
@@ -384,6 +384,9 @@ $endif$
 
 \begin{document}
 $if(title)$
+$if(book-class)$
+\frontmatter
+$endif$
 $if(beamer)$
 \frame{\titlepage}
 $else$
@@ -427,8 +430,14 @@ $endif$
 $if(lof)$
 \listoffigures
 $endif$
+$if(book-class)$
+\mainmatter
+$endif$
 $body$
 
+$if(book-class)$
+\backmatter
+$endif$
 $if(natbib)$
 $if(bibliography)$
 $if(biblio-title)$
